--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,7 +7,7 @@
 
  python:
    install:
-     - requirements: requirements.txt
+     - requirements: docs/reqirements.txt
 
  mkdocs:
    configuration: mkdocs.yml
