--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,2 +1,11 @@
 site_name: FedEasy
 theme: readthedocs
+
+pages:
+  Home: index.md
+  Installaton & Setup: install.md
+  Confugration: config.md
+  Datasets: datasets.md
+  Data Distributions: data_distribution.md
+  Models : models.md
+  Strategies: strategies.md
